@startuml classDiagramComposition

class File{
    - name : String  

    + File(fileName : String)
    + setName(name : String) : void 
    + getName() : String  
    + printFileName() : void 
    + toString() : String
}

class Folder{
    - name : String 
    - files : ArrayList<File>
    - subfolders : ArrayList<Folder> 

    + getName() : String
    + setName(name : String) : void
    + removeSubfolder(subFolderName : String) : void
    + addSubfolder(subFolderName : String) : void
    + getSubfolder(subFolderName : String) : Folder
    + removeFile(file : File) : boolean 
    + addFile(fileName : String) : void
    + toString() : String
    + printFolderContents() : void
}

class CompositionDriver{

}

Folder *-- Folder 
Folder *-- File 
@enduml 



